--- a/mario.html
+++ b/mario.html
@@ -9,11 +9,11 @@
 <body>
     <h3></h3>
     <canvas id="id-canvas" width="640" height="640"></canvas>
+    <canvas id="id-canvas-sprite" width="160" height="320"></canvas>
     <div class="control">
         <button data-action="change_offset" data-offset="-1024">-1024</button>
         <button data-action="change_offset" data-offset="-16">-16</button>
         <button data-action="change_offset" data-offset="16">16</button>
-
         <button data-action="change_offset" data-offset="1024">1024</button>
     </div>
     <script src="./mario.js"></script>
